<resources>
    <string name="app_name">ShopifyApp</string>
    <string name="title_activity_main_tabs">MainTabsActivity</string>
    <string name="title_home">Home</string>
    <string name="address_home">street 21, building 4, floor 4</string>
    <string name="title_item">Item name</string>
    <string name="checkout">Checkout</string>
    <string name="price_item">Item price</string>
    <string name="title_category">Category</string>
    <string name="title_me">Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="women">Women</string>
    <string name="men">Men</string>
    <string name="kids">Kids</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="welcome">Welcome</string>
    <string name="orders">Orders</string>
    <string name="more">more</string>
    <string name="wishList">Wish List</string>
    <string name="price">Price</string>
    <string name="created_at">Created at</string>
    <string name="coin">EGP</string>
    <string name="signup_btn">Sign Up</string>
    <string name="payment_method">Payment Method</string>
    <string name="Stripe">Stripe</string>
    <string name="cash">Cash on Delivery</string>
    <string name="coupon">Apply Coupon</string>
    <string name="place_order">Place Order</string>
    <string name="total_price">Total</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="city">Alexandria</string>
    <string name="address_title">Address</string>


    <string name="Brands">Brands</string>

    <string name="price_EGP">0.0</string>
    <string name="shopping_bag">Shopping Bag</string>
    <string name="discount_code">Discount codes</string>
    <string name="order_confirmation">Order Confirmation</string>


    <string name="name">Name</string>
    <string name="address">Alexandria,Egypt</string>

    <string name="add_address">Add Address</string>

    <string name="skip">Skip</string>
    <string name="have_account">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPass">Forget Password</string>
    <string name="first_name">First Name</string>
    <string name="second_name">Last Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="phone">+201235678910</string>
    <string name="shipping_method">Shipping Method</string>
    <string name="shipping">Shipping:</string>
    <string name="subtotal">Subtotal:</string>
    <string name="tax">Tax:</string>


    <string name="cancel">Cancel</string>
    <string name="looking_for">What are you lookin for?</string>
    <string name="rate">Rating</string>
    <string name="addToCart">Add To Cart</string>
    <string name="description">Description</string>
    <string name="size">Size</string>
    <string name="color">Color</string>
    <string name="quantity">Quantity</string>
    <string name="settings">Settings</string>
    <string name="currency">Currency</string>
    <string name="contactUs">Contact us</string>
    <string name="aboutUs">About us</string>
    <string name="logout">Logout</string>

    <string name="addressText">Address</string>
    <string name="country">egypt</string>
    <string name="zipCode">Zip code: 21234</string>
    <string name="address_hint">address</string>
    <string name="zipCode_hint">zip code</string>
    <string name="phone_hint">phone number</string>
    <string name="city_hint">city</string>
    <string name="country_hint">country</string>
    <string name="save">Save</string>

    <string name="mobile_number">MOBILE NUMBER</string>
    <string name="placed_on">Placed on</string>
    <string name="order_summary">ORDER SUMMARY</string>
    <string name="sub_total">Subtotal</string>
    <string name="shipping_fee">Shipping Fee</string>
    <string name="discount">Discount</string>
    <string name="reviews">Reviews</string>
    <string name="no_orders">You did not make any order</string>
    <string name="no_fav">There is nothing in the wishlist</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location">Location</string>
    <string name="no_internet_connection">Internet connection lost We will connect you when the connection is back</string>
    <string name="try_again">Try again</string>
    <string name="title_activity_splash_screen">Shopify App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="contactUsPhoneBottomSheet">phone: 0100101055</string>
    <string name="contactUsEmailBottomSheet">email: shopify@gmail.com</string>
    <string name="aboutUsBriefBottomSheet">This is our ITI graduation project, it\'s our pleasure to try to use it and if you have any concern please don\'t hesitate to contact us.</string>
    <string name="aboutUsTeamBottomsheet">Our team:\nHala Emad\nNihal Yasser\nRana Abdel Aziz</string>


</resources>