<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".payment.OrderConfirmationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/back_search_layout"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.25"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/dark_color"
            android:src="@drawable/back_button_icon"
            android:padding="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/subcategory_layout"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent="0.50"
        android:layout_height="0dp"
        app:layout_constraintStart_toEndOf="@+id/back_search_layout"
        app:layout_constraintTop_toTopOf="@+id/back_search_layout"
        app:layout_constraintBottom_toBottomOf="@+id/back_search_layout">

        <TextView
            android:id="@+id/subcategoryName_txt"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/order_confirmation"
            android:textColor="@color/dark_color"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subcategory_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            android:textStyle="bold"
            android:text="@string/name"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/arrow_forward" />

        <TextView
            android:id="@+id/phone_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_textView"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/phone"/>

        <TextView
            android:id="@+id/address_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/phone_textView"
            android:text="@string/address"/>

        <View
            android:id="@+id/first_line"
            android:layout_width="0dp"
            android:layout_height="@dimen/_1sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/browser_actions_bg_grey"
            app:layout_constraintTop_toBottomOf="@id/address_textView" />

        <TextView
            android:id="@+id/shipping_method_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/first_line"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:textStyle="bold"
            android:text="@string/shipping_method"/>

        <TextView
            android:id="@+id/shipping_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shipping_method_textView"
            android:layout_marginStart="@dimen/_5sdp"
            android:text="@string/shipping"/>

        <TextView
            android:id="@+id/price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/shipping_method_textView"
            android:text="@string/price_EGP"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>