<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_120sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/_8sdp"
    app:elevation="@dimen/_3sdp"
    android:layout_margin="@dimen/_5sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/place_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/home_orange"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/home_title"
            app:layout_constraintTop_toTopOf="@+id/home_title" />

        <TextView
            android:id="@+id/home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home"
            android:textColor="@color/dark_color"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintStart_toEndOf="@id/place_img"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/edit_img"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/edit_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/home_title"
            app:layout_constraintTop_toTopOf="@+id/home_title" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/city_textview"
            android:text="@string/city"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/place_img"
            android:layout_marginTop="@dimen/_15sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_textview"
            android:text="@string/phone"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/city_textview"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_textview"
            android:text="@string/address"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/_5sdp"
            app:layout_constraintTop_toBottomOf="@+id/number_textview"
            android:layout_marginTop="@dimen/_10sdp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>