<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".authentication.sign_up.SignUpFragment">

<ImageView
    android:id="@+id/cancel_ic"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toStartOf="@+id/signup_txt"
    app:layout_constraintTop_toTopOf="@+id/signup_txt"
    android:src="@drawable/back_button_icon"
    android:layout_marginEnd="15dp"
    android:padding="5dp"

    android:layout_marginStart="10dp"
    app:tint="@color/white"/>

<TextView
    android:id="@+id/signup_txt"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="60dp"
    android:layout_marginTop="40dp"
    android:text="@string/signup_btn"
    android:textSize="20sp"
    android:textStyle="bold"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/white_box"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_marginTop="60dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/signup_txt">

    <ImageView
        android:id="@+id/person_ic"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/shopping_cart_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/firstName_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:layout_marginStart="5dp"
        app:layout_constraintStart_toEndOf="@+id/person_ic"
        app:layout_constraintTop_toTopOf="@id/person_ic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/person_ic"/>

    <EditText
        android:id="@+id/secondName_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/second_name"
        android:inputType="textPersonName"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/firstName_edt"
        app:layout_constraintTop_toBottomOf="@+id/firstName_edt"
        app:layout_constraintEnd_toEndOf="parent"/>


    <ImageView
        android:id="@+id/email_ic"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/shopping_cart_icon"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@+id/person_ic"
        app:layout_constraintTop_toBottomOf="@+id/secondName_edt"/>

    <EditText
        android:id="@+id/email_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/email_ic"
        app:layout_constraintTop_toTopOf="@+id/email_ic"
        app:layout_constraintBottom_toBottomOf="@+id/email_ic"/>

    <ImageView
        android:id="@+id/password_ic"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/shopping_cart_icon"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/person_ic"
        app:layout_constraintTop_toBottomOf="@+id/email_edt"/>

    <EditText
        android:id="@+id/password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/password_ic"
        app:layout_constraintTop_toTopOf="@+id/password_ic"
        app:layout_constraintBottom_toBottomOf="@+id/password_ic"/>

    <ImageView
        android:id="@+id/confirm_password_ic"
        android:layout_width="26dp"
        android:layout_height="26dp"
        android:src="@drawable/shopping_cart_icon"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="@id/person_ic"
        app:layout_constraintTop_toBottomOf="@+id/password_edt"/>

    <EditText
        android:id="@+id/confirm_password_edt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginStart="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/confirm_password_ic"
        app:layout_constraintTop_toTopOf="@+id/confirm_password_ic"
        app:layout_constraintBottom_toBottomOf="@+id/confirm_password_ic"
/>
    <Button
        android:id="@+id/signup_btn"
        android:layout_width="250dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_edt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/signup_btn"
        android:textColor="@color/white"/>








    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/signup_btn"
        app:layout_constraintStart_toStartOf="@+id/signup_btn"
        app:layout_constraintEnd_toEndOf="@+id/signup_btn"
        android:layout_marginTop="10dp"
        android:visibility="gone"/>



</androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>